@@ -5,6 +5,7 @@ plugins {
 
 application {
 	mainClass = "org.bread_experts_group.rfb.RemoteFrameBufferMainKt"
+	applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
 }
 
 group = "org.bread_experts_group"
@@ -17,7 +18,7 @@ repositories {
 
 dependencies {
 	testImplementation(kotlin("test"))
-	implementation("org.bread_experts_group:bread_server_lib-code:D0F2N2P0")
+	implementation("org.bread_experts_group:bread_server_lib-code:D0F2N2P5")
 }
 
 tasks.test {
